--- a/example.env
+++ b/example.env
@@ -1,10 +1,5 @@
-SERVER_PORT=**********
-MONGO_URI=**********
+SERVER_PORT=5000
 JWT_KEY=**********
-DB_HOST=**********
-DB_USER=r**********
-DB_PASSWORD=**********
-DB_PORT=**********
-DB_NAME=**********
-RABBITMQ_URL=**********
-
+MONGO_URI=mongodb://localhost:27017/books_store
+USER_EMAIL=**********
+USER_PASS =*********
