--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "backend-api",
+  "name": "book-store-backend",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "amqplib": "^0.10.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
-    "knex": "^3.0.1",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.6.5",
+    "nodemailer": "^6.9.9",
     "nodemon": "^2.0.22",
-    "password-hash": "^1.2.2"
+    "password-hash": "^1.2.2",
+    "slugify": "^1.6.6"
   },
   "scripts": {
     "start": "nodemon app"
